Fix text wrap in template and guest
V1-V2 Use the same indent with the orginal one.
There are some text wrap in guest and template add page.
1 "Network I/O" in network page.
2 template local iso "OS" "Version"
This patch work fox fix them.

--- a/ui/css/theme-default/list.css
+++ b/ui/css/theme-default/list.css
@@ -231,7 +231,7 @@
 .list-title {
 	color: #666;
 	font-weight: bold;
-	font-size: 13px;
+	font-size: 12px;
 	overflow: hidden;
 	margin: 10px;
 }
